--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,5 @@
 - title: "About"
-  href: "/about/"
+  href: "/research/"
 
 - title: "Blog"
   href: "/blog/"
@@ -10,7 +10,7 @@
 - title: "Miscellany"
   href: "/miscellany/"
   subcategories:
-    - subtitle: "Item 1"
-      subhref: "/miscellany/item-1/"
-    - subtitle: "Item 2"
-      subhref: "/miscellany/item-2/"
+    - subtitle: "Photo"
+      subhref: "/miscellany/photo/"
+    - subtitle: "Video"
+      subhref: "/miscellany/video/"
