--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Meng Chen
-email: chenmengdx@163.com
+email: chenmengdx@outlook.com
 description: 
   Room 1804, Building 8,
   Huaxiangdongyuan Community,
