--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,7 @@
 title: Meng Chen
 email: chenmengdx@outlook.com
 description: 
-  Room 1804, Building 8,
-  Huaxiangdongyuan Community,
-  Fengtai District,100070,
-  Beijing, China
+  Welcome to Meng's Homepage!
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://chenmengdx.github.io" # the base hostname & protocol for your site
 twitter_username: chenmengdx
