--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Meng Chen
-email: chenmengdx@outlook.com
+email: chenmengdx@gmail.com
 description: 
   Welcome to Meng's Homepage!
 baseurl: "" # the subpath of your site, e.g. /blog/
