--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Meng Chen
 email: chenmengdx@gmail.com
 description: 
-  Time is the only critic without ambition. --by John Steinbeck
+  Time is the only critic without ambition. -John Steinbeck
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://chenmengdx.github.io" # the base hostname & protocol for your site
 twitter_username: chenmengdx
